--- a/k8sdeploy-scripts/clusteradmin.yaml
+++ b/k8sdeploy-scripts/clusteradmin.yaml
@@ -7,13 +7,12 @@ metadata:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: kubernetes-dashboard
-  namespace: kubernetes-dashboard
+  name: admin-user
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: cluster-admin
 subjects:
-  - kind: ServiceAccount
-    name: kubernetes-dashboard
-    namespace: kubernetes-dashboard
+- kind: ServiceAccount
+  name: admin-user
+  namespace: kubernetes-dashboard
